Fixing overflow photo messages issue with max width and height

--- a/components/message-window/message-box.module.css
+++ b/components/message-window/message-box.module.css
@@ -29,8 +29,10 @@
 }
 
 .message-img {
-  width: 100%;
-  height: 200px;
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 200px;
   object-fit: cover;
 }
 
